@@ -1,16 +1,51 @@
 package edu.colorado.phet.gravityandorbits.module;
 
+import edu.colorado.phet.common.phetcommon.model.Property;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
+import edu.colorado.phet.gravityandorbits.model.GravityAndOrbitsClock;
+import edu.colorado.phet.gravityandorbits.model.GravityAndOrbitsModel;
+
 /**
  * @author Sam Reid
  */
 public class GravityAndOrbitsMode {
     private String name;
+    private GravityAndOrbitsModel model;
+    private Property<Boolean> moonProperty = new Property<Boolean>( false );
 
     public GravityAndOrbitsMode( String name ) {
         this.name = name;
+        model = new GravityAndOrbitsModel( new GravityAndOrbitsClock( GravityAndOrbitsDefaults.CLOCK_FRAME_RATE, GravityAndOrbitsDefaults.CLOCK_DT ), moonProperty );
+        getMoonProperty().addObserver( new SimpleObserver() {
+            public void update() {
+                if ( getMoonProperty().getValue() ) {
+                    model.getPlanet().resetAll();
+                    model.getMoon().resetAll();
+                    model.getSun().resetAll();
+                }
+            }
+        } );
     }
 
     public String getName() {
         return name;
+    }
+
+    public GravityAndOrbitsModel getModel() {
+        return model;
+    }
+
+    public void reset() {
+        model.getClock().resetSimulationTime();// reset the clock
+        moonProperty.reset();
+        model.resetAll();
+    }
+
+    public Property<Boolean> getMoonProperty() {
+        return moonProperty;
+    }
+
+    public void setRunning( boolean running ) {
+        model.getClock().setRunning( running );
     }
 }
