@@ -20,9 +20,9 @@ public class GravityAndOrbitsModuleState implements Serializable {
         showPaths = module.getShowPathProperty().getValue();
         showVelocity = module.getShowVelocityProperty().getValue();
         showMass = module.getShowMassProperty().getValue();
-        moonProperty = module.getMoonProperty().getValue();
+        moonProperty = module.getModeProperty().getValue().getMoonProperty().getValue();//TODO: store all mode states
 
-        modelState = new GravityAndOrbitsModelState( module.getGravityAndOrbitsModel() );
+        modelState = new GravityAndOrbitsModelState( module.getModeProperty().getValue().getModel() );
     }
 
     public void apply( GravityAndOrbitsModule gravityAndOrbitsModule ) {
@@ -30,8 +30,8 @@ public class GravityAndOrbitsModuleState implements Serializable {
         gravityAndOrbitsModule.getShowPathProperty().setValue( showPaths );
         gravityAndOrbitsModule.getShowVelocityProperty().setValue( showVelocity );
         gravityAndOrbitsModule.getShowMassProperty().setValue( showMass );
-        gravityAndOrbitsModule.getMoonProperty().setValue( moonProperty );
+        gravityAndOrbitsModule.getModeProperty().getValue().getMoonProperty().setValue( moonProperty );
 
-        modelState.apply( gravityAndOrbitsModule.getGravityAndOrbitsModel() );
+        modelState.apply( gravityAndOrbitsModule.getModeProperty().getValue().getModel() );
     }
 }
